tests/macro-tests/cases/property/invalid_priority.stderr
error[E0425]: cannot find value `INVALID_PRI` in this scope
 --> cases/property/invalid_priority.rs:3:12
  |
3 | #[property(INVALID_PRI)]
  |            ^^^^^^^^^^^ not found in this scope
